--- a/pozicional.html
+++ b/pozicional.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Poziconálás</title>
+    <link rel="stylesheet" href="formaz.css">
 </head>
 <body>
-    
+    <div id="keret">
+        <span id="szoveg">ablak</span>
+
+    </div>
 </body>
 </html>
