--- a/pozicional.html
+++ b/pozicional.html
@@ -10,7 +10,9 @@
 <body>
     <div id="keret">
         <span id="szoveg">ablak</span>
-
+    </div>
+    <div id="fix">
+        <a href="https://idokep.com">?</a>
     </div>
 </body>
 </html>
